[package]
name = "peercoin-seeder-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
trust-dns-server = "0.22"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bitcoin = "0.26"
rand = "0.9.1"
sha2 = "0.10"
futures = "0.3.31"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
